--- a/README
+++ b/README
@@ -10,7 +10,7 @@ psql -f TREESTUMP/treestump/ddl/create.ddl
 
 pip install readability
 pip install requests
-pip install twitter foursquare instagram
+pip install python-twitter foursquare instagram
 
 http://code.google.com/p/python-twitter/
 https://github.com/joet3ch/foursquare-python
